# rs-skyjo

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  projectctl.yml
.github/workflows/: cache.yml  ci.yml  release.yml
cli/: Cargo.toml
core/: Cargo.toml
