[package]
name = "rs-skyjo-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Guillaume Leroy <pro.guillaume.leroy@gmail.com"]
description = "CLI to play Skyjo"
repository = "https://github.com/leroyguillaume/rs-skyjo.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs-skyjo-core = { path = "../core" }

[dev-dependencies]
