[package]
name = "rs-skyjo-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Guillaume Leroy <pro.guillaume.leroy@gmail.com"]
description = "Rust implementation of Skyjo game"
repository = "https://github.com/leroyguillaume/rs-skyjo.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
